# aria-hotel-ai

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  Makefile  README-pt.md  README.md  docker-compose.simple.yml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
app/: __init__.py  cli.py
app/agents/: __init__.py
app/agents/ana/: __init__.py  agent.py  calculator.py  gemini_agent.py  improved_agent.py  knowledge_base.py  models.py  nlp_processor.py  proactive_concierge.py  prompts.py
app/api/: main.py
app/api/webhooks/: whatsapp.py
app/auth/: security.py
app/core/: __init__.py  config.py  logging.py  reservations.py  sessions.py  utils.py
app/core/memory/: vector_store.py
app/core/notifications/: proactive.py
app/integrations/omnibees/: client.py
app/integrations/whatsapp/: __init__.py  client.py  media.py
app/models/: __init__.py  conversation.py  guest.py  reservation.py
app/services/analytics/: dashboard.py
app/services/messaging/: templates.py
app/services/notifications/: proactive.py
app/services/payments/: gateway.py
app/services/vision/: vision_processor.py
config/: nginx.conf  prometheus.yml
docs/: complete-implementation-guide.md  implementation-guide.md  implementation-status.md  improvement-plan.md  improvements-summary.md  new-features-guide.md  quickstart.md
scripts/: docker-start.sh  init_db.sql  setup.sh  start.sh
src/aria/: __init__.py  cli.py
src/aria/agents/: __init__.py
src/aria/agents/ana/: __init__.py  agent.py  calculator.py  gemini_agent.py  improved_agent.py  knowledge_base.py  models.py  nlp_processor.py  prompts.py
src/aria/analytics/: dashboard.py
src/aria/api/: __init__.py  main.py
src/aria/api/webhooks/: whatsapp.py
src/aria/auth/: security.py
src/aria/core/: __init__.py  config.py  logging.py  sessions.py  utils.py
src/aria/core/memory/: vector_store.py
src/aria/core/notifications/: proactive.py
src/aria/domain/guest/: entities.py
src/aria/domain/reservation/: entities.py
src/aria/domain/shared/: entity.py  events.py  value_objects.py
src/aria/integrations/omnibees/: client.py
src/aria/integrations/whatsapp/: __init__.py  client.py  media.py
src/aria/messaging/: templates.py
src/aria/observability/: monitoring.py
src/aria/payments/: gateway.py
src/aria/tools/: vision_processor.py
tests/: __init__.py
tests/unit/: test_ana_calculator.py  test_improved_features.py  test_utils.py  test_whatsapp_client.py
